# ibkr-cp-api-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  swagger.json
.github/workflows/: rust.yml
src/: auth.rs  client.rs  lib.rs  utils.rs
src/models/: account_ledger.rs  contract.rs  contract_detail.rs  definitions.rs  exchanges.rs  executions.rs  futures_contract.rs  market_data_history.rs  mod.rs  order_ticket.rs  positions.rs  stock_contracts.rs  tick_types.rs  tickle.rs
src/rest/: endpoints.rs  mod.rs
src/tests/: mod.rs  test_auth.rs  test_rest.rs  test_websocket.rs
src/websocket/: connect.rs  mod.rs  requests.rs
