[package]
name = "ibkr-cp-api-client"
version = "0.2.0"
edition = "2021"
authors = ["Juan I Marquez"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0",default-features = false,features = ["process","macros"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"] }
serde_repr = "0.1.16"
rust_decimal = { version = "1.31.0", features = ["serde-float","serde-str"] }
dotenv = "0.15.0"
thirtyfour = {version = "0.31.0",optional = true}

[features]
# brings in functions that start and authenticate the portal. Currently only supports unix.
auth = ["dep:thirtyfour"]