[package]
name = "ibkr-cp-api-client"
version = "0.3.0"
edition = "2021"
authors = ["Juan I Marquez"]
license = "MIT"
homepage = "https://github.com/numberjuani/ibkr-cp-api-client"
repository = "https://github.com/numberjuani/ibkr-cp-api-client"
description = "A client for the IBKR Client Portal API"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1",default-features = false,features = ["process","macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_repr = "0.1"
rust_decimal = { version = "1", features = ["serde-float","serde-str"] }
dotenvy = "0.15"
thirtyfour = {version = "0.31.0",optional = true}

[features]
# brings in functions that start and authenticate the portal. Currently only supports unix.
auth = ["dep:thirtyfour"]